# ai-job-search-poc

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  models.py  populate_company_sizes.py  populate_jobs.py  pyproject.toml
db/: __init__.py
filter/: job.py
migrations/: env.py
migrations/versions/: 1da574326e9a_add_company_size.py  20250609_populate_jobs_with_fixtures.py  4b6616730381_update_jobs_table_with_enums.py  67e9a86035a0_fix_salary_field_and_update_jobs_table.py  9e1b59306408_create_jobs_table.py  de4ffd17216b_add_company_size.py
routes/jobs/: search_jobs.py  search_jobs_ai.py
serializer/: job.py
util/: filter.py  pagination.py  query.py
